--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,9 +1,27 @@
 @import "../../../styles.css";
 
-h1 {
+.header {
 	width: 100%;
+	height: 13%;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	align-items: center;
 	text-align: center;
-	font-size: 24px;
+	border-bottom: 2px double #008000ad;
+}
+h1 {
+	font-size: x-large;
 	color: #008000ad;
-	padding: 20px 0;
+	margin: 0;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+	.header {
+		height: 25%;
+	}
+
+	h1 {
+		font-size: large;
+	}
 }
