--- a/src/app/components/search-slots/components/search-by-pincode/search-by-pincode.component.html
+++ b/src/app/components/search-slots/components/search-by-pincode/search-by-pincode.component.html
@@ -1,4 +1,4 @@
-<div style="text-align: center;">
+<div class="input_pincode">
 	<p-inputNumber [(ngModel)]="pincode" mode="decimal" placeholder="Enter your pincode" maxlength="6" required="true"
 		[useGrouping]="false" (onBlur)="convertInput()">
 	</p-inputNumber>
