Some formatting changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-header></app-header>
-<app-search-slots></app-search-slots>
+<html>
+    <head></head>
+    <title>Check Covid Vaccination Slot Availability</title>
+    <body>
+        <app-header></app-header>
+        <app-search-slots></app-search-slots>
+    </body>
+</html>
