--- a/src/app/components/search-slots/components/slot-notification/slot-notification.component.html
+++ b/src/app/components/search-slots/components/slot-notification/slot-notification.component.html
@@ -1,15 +1,16 @@
-<div class="slot-notiication">
+<div class="slot-notification">
 	<h3>Slot unavailable?</h3>
-	<h4>Get notified on <a style="color: #2196F3" (click)="showEmailDialog()">Email</a> or <a
+	<h4>Avoid public groups on WhatsApp, Facebook and Telegram that share your personal number with everyone.</h4>
+	<h4>Get notified directly on your <a style="color: #2196F3" (click)="showEmailDialog()">Email</a> or <a
 			style="color: #2196F3" (click)="showWhatsAppDialog()">WhatsApp</a> when slot is available !</h4>
-
 	<p-dialog [(visible)]="displayEmail" [breakpoints]="{'960px': '80vw', '640px': '100vw'}"
-	[style]="{'text-align': 'center', 'height': '80vh'}" [modal]="true">
+		[style]="{'text-align': 'center', 'height': '80vh'}" [modal]="true">
 		<span *ngIf="emailAdded == 'false'">
 			<h4 style="color: red;">There's some error. Please try again</h4>
 		</span>
 		<span *ngIf="emailAdded == undefined || emailAdded == null || emailAdded == '' || emailAdded == 'false'">
-			<h4>Get Email Notification when slot is available.<br />You can get notification for Pincode / District / Both </h4>
+			<h4>Get Email Notification when slot is available.<br />You can get notification for Pincode / District /
+				Both </h4>
 
 			<div class="input_pincode">
 				<p-inputNumber [(ngModel)]="pincode" mode="decimal" placeholder="Enter your pincode" maxlength="6"
@@ -59,18 +60,19 @@
 			</div>
 		</span>
 		<div *ngIf="emailAdded == 'true'" style="height: 100%; display: flex; align-items: center;">
-			<h4>Great! You'll get an Email Notification when slot is available</h4>
+			<h4>Great! You'll get an Email Notification when slot is available.</h4>
 		</div>
 	</p-dialog>
 
 	<p-dialog [(visible)]="displayWhatsApp" [breakpoints]="{'960px': '80vw', '640px': '100vw'}"
-	[style]="{'text-align': 'center', 'height': '80vh'}" [modal]="true">
+		[style]="{'text-align': 'center', 'height': '80vh'}" [modal]="true">
 		<span *ngIf="mobileNoAdded == 'false'">
 			<h4 style="color: red;">There's some error. Please try again</h4>
 		</span>
 		<span
 			*ngIf="mobileNoAdded == undefined || mobileNoAdded == null || mobileNoAdded == '' || mobileNoAdded == 'false'">
-			<h4>Get WhatsApp Notification when slot is available.<br />You can get notification for Pincode / District / Both </h4>
+			<h4>Get WhatsApp Notification when slot is available.<br />You can get notification for Pincode / District /
+				Both </h4>
 
 			<div class="input_pincode">
 				<p-inputNumber [(ngModel)]="pincode" mode="decimal" placeholder="Enter your pincode" maxlength="6"
@@ -120,7 +122,7 @@
 			</div>
 		</span>
 		<span *ngIf="mobileNoAdded == 'true'" style="height: 100%; display: flex; align-items: center;">
-			<h4>Great! You'll get a WhatsApp Notification when slot is available</h4>
+			<h4>Great! You'll get a WhatsApp Notification when slot is available.</h4>
 		</span>
 	</p-dialog>
 </div>
