Some more changes for a working application

--- a/src/app/components/search-slots/components/search-by-district/search-by-district.component.css
+++ b/src/app/components/search-slots/components/search-by-district/search-by-district.component.css
@@ -1,5 +1,42 @@
 @import "../../../../../styles.css";
 
 :host ::ng-deep .p-dropdown {
-    width: 19rem;
+    width: 17rem;
+}
+
+:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item,
+:host ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder,
+:host ::ng-deep .p-dropdown.p-dropdown-clearable .p-dropdown-label,
+:host ::ng-deep .p-dropdown-panel .p-dropdown-header .p-dropdown-filter,
+:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-empty-message {
+    font-size: smaller;
+}
+
+:host ::ng-deep .p-button.p-button-sm {
+    font-size: smaller;
+    padding: 0.4375rem;
+}
+
+.error {
+    margin: 0;
+    color: red;
+    font-size: x-small;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    :host ::ng-deep .p-dropdown {
+        width: 90%;
+    }
+
+    :host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item,
+    :host ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder,
+    :host ::ng-deep .p-dropdown.p-dropdown-clearable .p-dropdown-label,
+    :host ::ng-deep .p-dropdown-panel .p-dropdown-header .p-dropdown-filter,
+    :host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-empty-message {
+        font-size: medium;
+    }
+
+	.input_state, .input_district {
+		text-align: center;
+	}
 }
