--- a/src/app/components/search-slots/components/slot-notification/slot-notification.component.html
+++ b/src/app/components/search-slots/components/slot-notification/slot-notification.component.html
@@ -1,27 +1,33 @@
 <div class="slot-notification">
-	<h3>Slot unavailable?</h3>
-	<h4>Avoid public groups on WhatsApp, Facebook and Telegram that share your personal number with everyone.</h4>
-	<h4>Get notified directly on your <a style="color: #2196F3" (click)="showEmailDialog()">Email</a> or <a
-			style="color: #2196F3" (click)="showWhatsAppDialog()">WhatsApp</a> when slot is available !</h4>
+	<h4>Slot unavailable?</h4>
+	<h5>Get notified directly on your <a (click)="showEmailDialog()">Email</a> or <a (click)="showWhatsAppDialog()">WhatsApp</a> when slot is available !</h5>
+	<h5>Notification feature coming soon...</h5>
+	<h6>Note : Slots are provided by the state govt and private hospitals. Slot availability data is cached and may be upto 30 minutes old.</h6>
+	
 	<p-dialog [(visible)]="displayEmail" [breakpoints]="{'960px': '80vw', '640px': '100vw'}"
-		[style]="{'text-align': 'center', 'height': '80vh'}" [modal]="true">
-		<span *ngIf="emailAdded == 'false'">
-			<h4 style="color: red;">There's some error. Please try again</h4>
-		</span>
-		<span *ngIf="emailAdded == undefined || emailAdded == null || emailAdded == '' || emailAdded == 'false'">
-			<h4>Get Email Notification when slot is available.<br />You can get notification for Pincode / District /
-				Both </h4>
+		[style]="{'text-align': 'center', 'height': '80vh'}" [modal]="true" [dismissableMask]="true"
+		(onShow)="resetAllInputStyles()">
+		<div *ngIf="emailAdded != 'true'">
+			
+			<h5>Get Email Notification when slot is available.<br />
+				You can get notification for Pincode / District / Both </h5>
+
+			<p *ngIf="emailAdded != null && emailAdded != undefined" class="error">{{emailAdded}}</p>
+
+			<div class="error" style="margin-bottom: 1.67em;">
+				<p *ngFor="let error of commonErrors" style="margin: 0;">{{error}}</p>
+			</div>
 
 			<div class="input_pincode">
-				<p-inputNumber [(ngModel)]="pincode" mode="decimal" placeholder="Enter your pincode" maxlength="6"
-					required="true" [useGrouping]="false" (onBlur)="convertInput()">
+				<p-inputNumber [(ngModel)]="pincode" mode="decimal" placeholder="Enter your pincode" maxlength="6" 
+					[useGrouping]="false" (onBlur)="validatePincodeAndDistrict()">
 				</p-inputNumber>
 			</div>
 
 			<div class="input_state" style="margin-top: 10px;">
-				<p-dropdown #dd1 [options]="states" [(ngModel)]="selectedState" optionLabel="name" [filter]="true"
-					filterBy="name" [showClear]="true" required="true" resetFilterOnHide="true"
-					placeholder="Select State" [style]="{'text-align': 'left'}" (onChange)="showDistricts()">
+				<p-dropdown #dd1 [options]="states" [(ngModel)]="selectedState" optionLabel="name" [filter]="true" filterBy="name"
+					[showClear]="true" resetFilterOnHide="true" placeholder="Select State"
+					[style]="{'text-align': 'left'}" (onChange)="showDistricts()">
 					<ng-template pTemplate="selectedItem">
 						<div class="state-item state-item-value" *ngIf="selectedState">
 							<div>{{selectedState.name}}</div>
@@ -34,11 +40,12 @@
 					</ng-template>
 				</p-dropdown>
 			</div>
-
+			
 			<div style="margin-top: 10px;" *ngIf="selectedState" class="input_district">
 				<p-dropdown #dd2 [options]="districts" [(ngModel)]="selectedDistrict" optionLabel="name" [filter]="true"
-					filterBy="name" [showClear]="true" required="true" resetFilterOnHide="true"
-					placeholder="Select District" [style]="{'text-align': 'left'}">
+					filterBy="name" [showClear]="true" resetFilterOnHide="true" 
+					placeholder="Select District" (onChange)="validatePincodeAndDistrict()"
+					[style]="{'text-align': 'left'}">
 					<ng-template pTemplate="selectedItem">
 						<div class="district-item district-item-value" *ngIf="selectedState && selectedDistrict">
 							<div>{{selectedDistrict.name}}</div>
@@ -52,38 +59,43 @@
 				</p-dropdown>
 			</div>
 
-			<input type="text" pInputText [(ngModel)]="email" placeHolder="Enter your email address"
-				style="margin-top: 10px;" />
+			<input type="text" pInputText [(ngModel)]="email" placeholder="Enter your email address" 
+			id="email" (ngModelChange)="validateEmail()" style="margin-top: 10px;" />
 
 			<div style="margin-top: 15px;">
+				<re-captcha #reCaptchaEmail (resolved)="resolved($event)" (error)="errored($event)" errorMode="handled" [siteKey]="reCaptchaSiteKey"></re-captcha>
 				<button pButton type="button" label="Notify Me" class="p-button-sm" (click)="notifyMe()"></button>
 			</div>
-		</span>
+		</div>
 		<div *ngIf="emailAdded == 'true'" style="height: 100%; display: flex; align-items: center;">
 			<h4>Great! You'll get an Email Notification when slot is available.</h4>
 		</div>
 	</p-dialog>
 
 	<p-dialog [(visible)]="displayWhatsApp" [breakpoints]="{'960px': '80vw', '640px': '100vw'}"
-		[style]="{'text-align': 'center', 'height': '80vh'}" [modal]="true">
-		<span *ngIf="mobileNoAdded == 'false'">
-			<h4 style="color: red;">There's some error. Please try again</h4>
-		</span>
-		<span
-			*ngIf="mobileNoAdded == undefined || mobileNoAdded == null || mobileNoAdded == '' || mobileNoAdded == 'false'">
-			<h4>Get WhatsApp Notification when slot is available.<br />You can get notification for Pincode / District /
-				Both </h4>
+		[style]="{'text-align': 'center', 'height': '80vh'}" [modal]="true" [dismissableMask]="true"
+		(onShow)="resetAllInputStyles()">
+		<div *ngIf="mobileNoAdded != 'true'">
 
+			<h5>Get WhatsApp Notification when slot is available.<br />
+				You can get notification for Pincode / District / Both </h5>
+
+			<p *ngIf="mobileNoAdded != null && mobileNoAdded != undefined" class="error">{{mobileNoAdded}}</p>
+
+			<div class="error" style="margin-bottom: 1.67em;">
+				<p *ngFor="let error of commonErrors" style="margin: 0;">{{error}}</p>
+			</div>
+			
 			<div class="input_pincode">
-				<p-inputNumber [(ngModel)]="pincode" mode="decimal" placeholder="Enter your pincode" maxlength="6"
-					required="true" [useGrouping]="false" (onBlur)="convertInput()">
+				<p-inputNumber [(ngModel)]="pincode" mode="decimal" placeholder="Enter your pincode" maxlength="6" 
+					[useGrouping]="false" (onBlur)="validatePincodeAndDistrict()">
 				</p-inputNumber>
 			</div>
 
 			<div class="input_state" style="margin-top: 10px;">
-				<p-dropdown #dd1 [options]="states" [(ngModel)]="selectedState" optionLabel="name" [filter]="true"
-					filterBy="name" [showClear]="true" required="true" resetFilterOnHide="true"
-					placeholder="Select State" [style]="{'text-align': 'left'}" (onChange)="showDistricts()">
+				<p-dropdown #dd1 [options]="states" [(ngModel)]="selectedState" optionLabel="name" [filter]="true" filterBy="name"
+					[showClear]="true" resetFilterOnHide="true" placeholder="Select State"
+					[style]="{'text-align': 'left'}" (onChange)="showDistricts()">
 					<ng-template pTemplate="selectedItem">
 						<div class="state-item state-item-value" *ngIf="selectedState">
 							<div>{{selectedState.name}}</div>
@@ -96,11 +108,12 @@
 					</ng-template>
 				</p-dropdown>
 			</div>
-
+			
 			<div style="margin-top: 10px;" *ngIf="selectedState" class="input_district">
 				<p-dropdown #dd2 [options]="districts" [(ngModel)]="selectedDistrict" optionLabel="name" [filter]="true"
-					filterBy="name" [showClear]="true" required="true" resetFilterOnHide="true"
-					placeholder="Select District" [style]="{'text-align': 'left'}">
+					filterBy="name" [showClear]="true" resetFilterOnHide="true" 
+					placeholder="Select District" (onChange)="validatePincodeAndDistrict()"
+					[style]="{'text-align': 'left'}">
 					<ng-template pTemplate="selectedItem">
 						<div class="district-item district-item-value" *ngIf="selectedState && selectedDistrict">
 							<div>{{selectedDistrict.name}}</div>
@@ -114,15 +127,20 @@
 				</p-dropdown>
 			</div>
 
-			<input type="text" maxlength="10" pInputText [(ngModel)]="mobileNo"
-				placeHolder="Enter your whatsapp mobile number" style="margin-top: 10px;" />
+			<div class="input_mobile_no" style="margin-top: 10px;">
+				<p-inputNumber id="mobile" [(ngModel)]="mobileNo" mode="decimal" 
+					placeholder="Enter your Whatsapp mobile number" maxlength="10" 
+					required="true" [useGrouping]="false" (onBlur)="validateMobileNo()">
+				</p-inputNumber>
+			</div>
 
 			<div style="margin-top: 15px;">
+				<re-captcha #reCaptchaMobile (resolved)="resolved($event)" (error)="errored($event)" errorMode="handled" [siteKey]="reCaptchaSiteKey"></re-captcha>
 				<button pButton type="button" label="Notify Me" class="p-button-sm" (click)="notifyMe()"></button>
 			</div>
-		</span>
-		<span *ngIf="mobileNoAdded == 'true'" style="height: 100%; display: flex; align-items: center;">
+		</div>
+		<div *ngIf="mobileNoAdded == 'true'" style="height: 100%; display: flex; align-items: center;">
 			<h4>Great! You'll get a WhatsApp Notification when slot is available.</h4>
-		</span>
+		</div>
 	</p-dialog>
 </div>
