--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<app-search-slots></app-search-slots>
+<div style="height: 84%;overflow-y: auto;">
+    <app-search-slots></app-search-slots>
+</div>
+<app-footer></app-footer>
