--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,26 +2,22 @@
 
 .header {
 	width: 100%;
-	height: 13%;
+	height: 10%;
 	display: flex;
 	align-content: center;
 	justify-content: center;
 	align-items: center;
+	padding: 20px 15px;
 	text-align: center;
-	border-bottom: 2px double #008000ad;
+	border-bottom: 2px double #43a743e6;
 }
+
 h1 {
-	font-size: x-large;
-	color: #008000ad;
+	font-size: larger;
+	color: #43a743e6;
 	margin: 0;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-	.header {
-		height: 25%;
-	}
-
-	h1 {
-		font-size: large;
-	}
+	
 }
