--- a/src/app/components/search-slots/components/slot-notification/slot-notification.component.css
+++ b/src/app/components/search-slots/components/slot-notification/slot-notification.component.css
@@ -1,41 +1,84 @@
 @import "../../../../../styles.css";
 
-:host ::ng-deep .p-dropdown {
-    width: 19rem;
-}
-
-:host ::ng-deep .p-inputnumber {
-    width: 19rem;
-}
-
 :host ::ng-deep .p-dialog .p-dialog-header {
     padding-bottom: 0;
+	justify-content: flex-end;
 }
 
-:host ::ng-deep .p-dialog .p-dialog-content{
+:host ::ng-deep .p-dialog .p-dialog-content {
     height: inherit;
 }
 
-h3 {
-	color: #008000ad;
-	text-decoration: underline;
-}
-
-h4 {
-	color: #008000ad;
-}
-
-a {
-	cursor: pointer;
-}
-
+:host ::ng-deep .p-inputnumber,
+:host ::ng-deep .p-dropdown,
 input {
     width: 19rem;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {	
-	h3 {
-		margin: 0;
+:host ::ng-deep .p-inputnumber-input,
+:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item,
+:host ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder,
+:host ::ng-deep .p-dropdown.p-dropdown-clearable .p-dropdown-label,
+:host ::ng-deep .p-dropdown-panel .p-dropdown-header .p-dropdown-filter,
+:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-empty-message,
+:host ::ng-deep .p-button.p-button-sm,
+input {
+    font-size: smaller;
+}
+
+:host ::ng-deep .p-button.p-button-sm {
+    padding: 0.4375rem;
+}
+
+.slot-notification {
+	padding: 10px;
+}
+
+h4, h5 {
+	color: #43a743e6;
+}
+
+h6 {
+	color: #495057;
+	margin-bottom: 0;
+}
+
+a {
+	cursor: pointer;
+	color: #2196F3;
+	text-decoration: underline;
+}
+
+button {
+	margin-top: 15px;
+}
+
+re-captcha {
+	margin: 0 auto;
+	display: table
+}
+
+.error {
+	color: #ff00009e;
+    font-size: smaller;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    :host ::ng-deep .p-inputnumber,
+	:host ::ng-deep .p-dropdown,
+	input {
+        width: 90%;
+    }
+
+	:host ::ng-deep .p-inputnumber-input,
+	:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item,
+	:host ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder,
+	:host ::ng-deep .p-dropdown.p-dropdown-clearable .p-dropdown-label,
+	:host ::ng-deep .p-dropdown-panel .p-dropdown-header .p-dropdown-filter,
+	:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-empty-message,
+	:host ::ng-deep .p-button.p-button-sm,
+	input {
+		font-size: medium;
 	}
 
 	h4 {
