--- a/src/app/components/search-slots/search-slots.component.css
+++ b/src/app/components/search-slots/search-slots.component.css
@@ -1,8 +1,24 @@
 @import "../../../styles.css";
 
+:host ::ng-deep .p-tabview-nav {
+	align-items: center;
+	justify-content: center;
+	font-size: smaller;
+	border: none;
+	padding: 10px 5px;
+}
+
+:host ::ng-deep .p-tabview-panels {
+	padding: 10px 10px;
+}
+
+:host ::ng-deep app-available-slots {
+	height: 100%;
+}
+
 .slot-container {
 	width: 100%;
-	height: 87%;
+	height: 100%;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -18,22 +34,29 @@
 .content {
 	width: 100%;
 	display: flex;
-	flex: 1 1;
+	flex: 1 0;
 	flex-direction: column;
-	align-content: center;
-	justify-content: center;
-	align-items: center;
-	border-left: 2px double #008000ad;
+	border-left: 2px double #43a743e6;
 }
 
 input {
-    width: 19rem;
+    width: 17rem;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-	.menu {
+	:host ::ng-deep .p-tabview-nav {
+		font-size: medium;
+	}
+
+	.slot-container {
 		width: 100%;
-		flex: 1 1;
+	}
+
+	.menu {
+		width: inherit;
+		display: block;
+		flex: none;
+		padding: 5px 10px;
 	}
 
 	.content {
