--- a/src/styles.css
+++ b/src/styles.css
@@ -7,4 +7,6 @@ html {
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	height: -webkit-fill-available;
+	margin: 0;
+	padding: 0;
 }
