--- a/src/app/components/search-slots/components/search-by-district/search-by-district.component.css
+++ b/src/app/components/search-slots/components/search-by-district/search-by-district.component.css
@@ -8,13 +8,13 @@
 :host ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder,
 :host ::ng-deep .p-dropdown.p-dropdown-clearable .p-dropdown-label,
 :host ::ng-deep .p-dropdown-panel .p-dropdown-header .p-dropdown-filter,
-:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-empty-message.error,
-:host ::ng-deep .p-radiobutton-label {
+:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-empty-message,
+:host ::ng-deep .p-radiobutton-label,
+:host ::ng-deep .p-button.p-button-sm {
     font-size: smaller;
 }
 
 :host ::ng-deep .p-button.p-button-sm {
-    font-size: smaller;
     padding: 0.4375rem;
 }
 
@@ -44,10 +44,11 @@
     }
 
     :host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item,
-    :host ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder,
-    :host ::ng-deep .p-dropdown.p-dropdown-clearable .p-dropdown-label,
-    :host ::ng-deep .p-dropdown-panel .p-dropdown-header .p-dropdown-filter,
-    :host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-empty-message {
+	:host ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder,
+	:host ::ng-deep .p-dropdown.p-dropdown-clearable .p-dropdown-label,
+	:host ::ng-deep .p-dropdown-panel .p-dropdown-header .p-dropdown-filter,
+	:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-empty-message,
+	:host ::ng-deep .p-button.p-button-sm {
         font-size: medium;
     }
 
